# NSS-Code-Challenge

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
challenge/: api.py  challenge.py
scripts/: run_solution.py
tests/: check_solution.py  conftest.py
