[tool.poetry]
name = "nss-code-challenge"
version = "0.1.0"
description = "code challenge for mock technicall interview"
authors = ["none"]
readme = "README.md"
packages = [{include = "challenge"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
